# anomalies-detection

./: .gitignore  README.md  concat.py  config.yml  config.yml.dvc  data.dvc  load_logs.sh  load_logs_and_traces.sh  pyproject.toml
.dvc/: config
ipynb/: eda.ipynb
load_logs/: logs_to_ds_collector.py  main_logs.py
load_traces/: main.py
load_traces/utils/: convert_tag_value.py  date_utils.py  fetch_jaeger_traces.py
