[tool.poetry]
name = "anomalies-detection"
version = "0.0.1"
description = "Anomalies detection in software development cycle"
authors = ["Vladimir Katin <katin.v.v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
jupyterlab = "^4.1.5"
seaborn = "^0.13.2"
scipy = "^1.12.0"
torch = "^2.2.1"
pyarrow = "^15.0.2"
fastparquet = "^2024.2.0"
scikit-learn = "^1.4.1.post1"
statsmodels = "^0.14.1"

[tool.poetry.group.dev.dependencies]
dvc-s3 = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
