[tool.poetry]
name = "anomalies-detection"
version = "0.0.1"
description = "Anomalies detection in software development cycle"
authors = ["Vladimir Katin <katin.v.v@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
pyarrow = "^15.0.2"
fastparquet = "^2024.2.0"
dvc-s3 = "^3.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
